--- a/assets/styles.css
+++ b/assets/styles.css
@@ -21,7 +21,7 @@ time, mark, audio, video {
     color: white;
 }
 
-.lighter{
+.lighter {
     font-weight: lighter;
 }
 
@@ -33,15 +33,15 @@ time, mark, audio, video {
     text-decoration: underline;
 }
 
-.hide{
+.hide {
     display: none;
 }
 
-.bold{
+.bold {
     font-weight: bold;
 }
 
-.grey{
+.grey {
     color: #515f67;
 }
 
@@ -58,15 +58,16 @@ nav {
     opacity: 0.85;
     display: flex;
     flex-direction: column;
-    height: 15vh;
+    height: fit-content;
 }
 
 h1 {
     color: white;
 }
 
-h2{
-    font-weight: lighter;margin-bottom: 4vh;
+h2 {
+    font-weight: lighter;
+    margin-bottom: 4vh;
 }
 
 nav > ul {
@@ -140,21 +141,21 @@ section.portfolio > ul {
     flex-wrap: wrap;
 }
 
-div.imgs-pf{
+div.imgs-pf {
     display: grid;
     justify-items: center;
 }
 
-img.img-pf{
+img.img-pf {
     margin-bottom: 5vh;
 }
 
-section.jds{
+section.jds {
     padding: 2vw;
     background-color: #515f67;
 }
 
-button.jsd{
+button.jsd {
     margin: 2vh 0 2vh;
     padding: 7px 25px 7px 25px;
     background-color: #515f67;
@@ -162,22 +163,22 @@ button.jsd{
     color: black;
 }
 
-img.video{
+img.video {
     width: 95vw;
 }
 
-section.twitter{
+section.twitter {
     background-color: #4bcaff;
     padding: 2vw;
 }
 
-div.twitter-header{
+div.twitter-header {
     display: flex;
     flex-direction: row;
     justify-content: space-between;
 }
 
-section.who-is{
+section.who-is {
     background-image: url("./images/bg_who_is_john_doe.png");
     background-size: cover;
     background-position: center;
@@ -185,36 +186,36 @@ section.who-is{
     padding: 2vw;
 }
 
-img.icon-who-is{
+img.icon-who-is {
     border: white solid;
     padding: 2vw;
 }
 
-article.who-is{
+article.who-is {
     display: grid;
 }
 
-article.who-is > div.part2{
+article.who-is > div.part2 {
     margin-top: 4vh;
 }
 
-div.part2 > p{
+div.part2 > p {
     margin-bottom: 4vh;
 }
 
-img.icon-who-is{
+img.icon-who-is {
     margin-right: 4vw;
 }
 
-section.testimonials{
+section.testimonials {
     padding: 2vw;
 }
 
-p.w-w{
+p.w-w {
     font-size: 75%;
 }
 
-section.contact{
+section.contact {
     background-image: url("./images/bg-contact.png");
     background-size: cover;
     background-position: center;
@@ -222,27 +223,118 @@ section.contact{
     padding: 2vw;
 }
 
-textarea{
+textarea {
     width: 94vw;
 }
 
-p.contact{
+p.contact {
     margin-bottom: 2vh;
 }
 
-input.send{
+input.send {
     background-color: #4bcaff;
     border: #4bcaff;
     padding: 10px 50px 10px 50px;
     margin-top: 2vh;
 }
 
-input{
+input {
     margin-bottom: 2vh;
 }
 
-input[type="email"], input[type="text"], textarea{
+input[type="email"], input[type="text"], textarea {
     background-color: unset;
     border: white solid;
     border-width: 1px;
+    min-height: 5vh;
+}
+
+footer {
+    background-color: #353f47;
+    color: #515f67;
+    padding: 2vh;
+}
+
+footer > ul {
+    display: flex;
+    flex-direction: row;
+    list-style: none;
+    justify-content: center;
+}
+
+p.copyright {
+    text-align: center;
+}
+
+@media (min-width: 765px) {
+
+    h1{
+        font-size: 200%;
+    }
+
+    h2{
+        font-size: 175%;
+    }
+
+    header > nav {
+        padding-top: 2vh;
+        font-size: 150%;
+    }
+
+    header > blockquote {
+        line-height: 170%;
+        font-size: 125%;
+    }
+
+    section.service > div.content {
+        display: grid;
+        grid-template-columns: repeat(2, 1fr);
+    }
+
+    h3.service{
+        font-size: 130%;
+    }
+
+    p.service{
+        font-size: 125%;
+    }
+    article > img.service{
+        display: block;
+    }
+
+    section.portfolio > ul{
+        font-size: 150%;
+    }
+
+    section.jds > article{
+        font-size: 125%;
+    }
+
+    button.jsd{
+        font-size: 125%;
+    }
+
+    section.twitter > p{
+        font-size: 125%;
+    }
+
+    article.who-is{
+        font-size: 125%;
+    }
+
+    section.testimonials > blockquote{
+        font-size: 125%;
+    }
+
+    p.w-w{
+        font-size: 115%;
+    }
+
+    section.contact{
+        font-size: 125%;
+    }
+
+    input.send{
+        font-size: 130%;
+    }
 }
