--- a/assets/styles.css
+++ b/assets/styles.css
@@ -61,6 +61,11 @@ nav {
     height: fit-content;
 }
 
+a{
+    color: white;
+    text-decoration: none;
+}
+
 h1 {
     color: white;
 }
@@ -80,12 +85,22 @@ nav > ul {
     flex-wrap: wrap;
 }
 
-li.home {
+li.selected {
     border: #4bcaff solid;
     border-radius: 3px;
     padding: 2px;
     padding-left: 7px;
     padding-right: 7px;
+    color: #4bcaff;
+}
+
+li.home{
+    border: #4bcaff solid;
+    border-radius: 3px;
+}
+
+li.home > a{
+    color: #4bcaff;
 }
 
 li {
@@ -141,6 +156,19 @@ section.portfolio > ul {
     flex-wrap: wrap;
     font-weight: 500;
     height: fit-content;
+}
+
+li > button{
+    color: #515f67;
+    background: none;
+    border: none;
+    font-size: 110%;
+}
+
+li > button:focus {
+    -moz-outline-style: none;
+    outline:none;
+    outline: 0;
 }
 
 div.imgs-pf {
@@ -381,6 +409,11 @@ p.copyright {
 
     li{
         padding-left: 2vw;
+    }
+
+    li.home{
+        padding-right: 1vw;
+        padding-left: 1vw;
     }
 
     header > nav{
